[gd_scene load_steps=2 format=3 uid="uid://de7vva81jj68i"]

[ext_resource type="Script" path="res://player_load/player_health.gd" id="1_w3am3"]

[node name="player_health" type="Node2D" node_paths=PackedStringArray("i_frames")]
script = ExtResource("1_w3am3")
i_frames = NodePath("i_frames")

[node name="i_frames" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[connection signal="timeout" from="i_frames" to="." method="_on_i_frames_timeout"]
